ecmascript/parser/tests/test262-error-references/fail/49edc77061449ae3.js.stderr
error: Invalid access to super
 --> $DIR/tests/test262-parser/fail/49edc77061449ae3.js:1:42
  |
1 | class A extends B { constructor() { super; } }
  |                                          ^

